<resources>
    <string name="app_name">TwStockApp</string>
    <string name="search">搜尋</string>
    <string name="type_number">請輸入代號</string>
    <string name="update_db">更新資料庫</string>
    <string name="type_condition">請輸入條件</string>
    <string name="update_failed"> 更新失敗 </string>
    <string name="update_success"> 更新成功 </string>
    <string name="please_input_correct_style"> 請輸入正確格式 </string>

    <string name="title_start">Start</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorites">favorites</string>

</resources>